--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@tanstack/react-query": "^4.29.12",
-    "@types/jsonwebtoken": "^9.0.2",
     "antd": "^5.5.2",
     "axios": "^1.4.0",
     "i": "^0.3.7",
     "i18next": "^22.5.0",
     "i18next-http-backend": "^2.2.1",
-    "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.4",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "styled-components": "^6.0.0-rc.3",
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
