--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@tanstack/react-query": "^4.29.12",
+    "@types/recharts": "^1.8.24",
     "antd": "^5.5.2",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "i": "^0.3.7",
     "i18next": "^22.5.0",
     "i18next-http-backend": "^2.2.1",
@@ -28,6 +32,7 @@
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
+    "recharts": "^2.7.2",
     "styled-components": "^6.0.0-rc.3",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.2"
