--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_CLOUDY_APIKEY="173476488473688"
 VITE_CLOUDY_SECRETKEY="L_HdKHzHOeGH48qL5DwMIrscK8Q"
 VITE_CLOUDY_PRESET="dv0smosn"
 VITE_LOCATION_APIKEY="pk.91694f91dfa8e396963df2b58cbce170"
+VITE_BACKEND_URL="http://localhost:5050"
